--- a/Eksamen/css/style.css
+++ b/Eksamen/css/style.css
@@ -1,4 +1,3 @@
-/* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 *{
     font-family: 'Poppins', sans-serif;
@@ -55,10 +54,33 @@ header{
     color: var(--text-color);
     font-weight: 400;
 }
+#cart-box-section {
+    display: flex;
+}
 #cart-icon {
     font-size: 1.8rem;
     cursor: pointer;
 }
+
+#cart-icon-items {
+    font-size: 0.8rem;
+    height: 1rem;
+    width: 1rem;
+    border-color: var(--text-color);
+    background-color: var(--bg-color);
+    border-width: 0.1rem;
+    border-style: solid;
+    border-radius: 50%;
+    /*text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 35px;
+    top: 2px;
+}
+
+
 .cart { 
     position: fixed;
     top: 0;
